Add a moving toast

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@codility/eslint-config-codility": "^2.0.0",
     "babel-eslint": "^10.0.2",
+    "dat.gui": "^0.7.6",
     "eslint": "^6.2.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
