--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
     "@codility/eslint-config-codility": "^2.0.0",
-    "babel-eslint": "^10.0.2",
+    "@types/dat.gui": "^0.7.4",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "dat.gui": "^0.7.6",
-    "eslint": "^6.2.0",
+    "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2",
+    "typescript": "^3.5.3",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   },
   "scripts": {
-    "start:dev": "webpack-dev-server"
+    "lint": "eslint src --fix --ext .js,.ts",
+    "start:dev": "webpack-dev-server",
+    "types": "tsc"
   }
 }
