--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "prettier": "^1.18.2",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^5.1.1",
+    "rollup-pluginutils": "^2.8.1",
     "typescript": "^3.5.3",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
