--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "noEmit": true,
+    "resolveJsonModule": true,
     "strict": true,
     "target": "es2017"
   },
