--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.18.2",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
